spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expected_type_symbol.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn f() -> bool {
    let A = false;
    let a: A = false;
    false
}


error: Expected A to be a type
  ┌─ testinput:3:12
  │
2 │     let A = false;
  │         - A is a variable
3 │     let a: A = false;
  │            ^ Expected a type
